<resources>
    <string name="app_name">Piggy Diary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Fragment main</string>
    <string name="btn_pay">Payment</string>
    <string name="btn_income">Income</string>
    <string name="btn_report">Save the text report!</string>
    <string name="list_day">Daily Statistics</string>
    <string name="list_week">Weekly Statistics</string>
    <string name="list_month">Monthly Statistics</string>
    <string name="list_all">All Statistics</string>

    <string name="pay_title">Payment</string>
    <string name="income_title">Income</string>
    <string name="total_title">Total</string>
    <string name="money">Money</string>
    <string name="money_default">0</string>
    <string name="label">Category</string>
    <string name="sub_label">Sub Category</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="date_title">Select the date</string>
    <string name="image">Image</string>
    <string name="image_take_new">Take new picture?</string>
    <string name="image_ok">OK</string>
    <string name="image_new">New</string>
    <string name="image_not_found">This image file is no longer existed.</string>
    <string name="msg_edit">EDIT Completed!</string>

    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>
    <string name="delete_title">Delete</string>
    <string name="delete_text">Do you want to delete this?</string>
    <string name="backup_title">Backup Report</string>
    <string name="backup_text">Do you want to start saving the report?</string>
    <string name="title_activity_pay">PayActivity</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="default_notify">預設報告提醒時間</string>
    <string name="default_notify_summary">在指定的時間通知產生報告</string>


    <string-array name="notify_minutes_array">
        <item>不通知</item>
        <item>一分鐘</item>
        <item>隔天</item>
        <item>隔月</item>
    </string-array>

    <string-array name="notify_minutes_value_array">
        <item>0</item>
        <item>1</item>
        <item>1440</item>
        <item>43200</item>
    </string-array>

    <string-array name="labelPayment">
        <item>食物</item>
        <item>家用</item>
        <item>交通</item>
        <item>娛樂</item>
        <item>學習</item>
        <item>醫療</item>
        <item>雜項</item>
    </string-array>

    <string-array name="labelIncome">
        <item>工作</item>
        <item>其他</item>
    </string-array>

    <string-array name="labelPaymentValue">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="labelIncomeValue">
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="subLabelFood">
        <item>早餐</item>
        <item>午餐</item>
        <item>晚餐</item>
        <item>茶飲</item>
    </string-array>

    <string-array name="subLabelUtility">
        <item>日常用品</item>
        <item>水電瓦斯</item>
        <item>房租房貸</item>
        <item>電話費</item>
        <item>網路費</item>
    </string-array>

    <string-array name="subLabelTransportation">
        <item>公共交通</item>
        <item>計程車</item>
        <item>汽機車加油</item>
        <item>火車</item>
        <item>飛機</item>
    </string-array>

    <string-array name="subLabelRecreation">
        <item>聚餐</item>
        <item>敗家</item>
        <item>寵物</item>
        <item>運動</item>
    </string-array>

    <string-array name="subLabelStudy">
        <item>書報雜誌</item>
        <item>上課進修</item>
        <item>網路進修</item>
    </string-array>

    <string-array name="subLabelMedication">
        <item>生病</item>
        <item>健檢</item>
    </string-array>

    <string-array name="subLabelOther">
        <item>其他</item>
    </string-array>
    <string name="title_activity_update">新增資料</string>
    <string name="title_activity_item_list">統計</string>

    <string-array name="subLabelWork">
        <item>薪水</item>
        <item>兼職</item>
    </string-array>

    <string-array name="subLabelOtherIncome">
        <item>禮物</item>
        <item>中獎</item>
    </string-array>

</resources>
