<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/img_input"
            android:layout_width="@dimen/item_image_sizeY"
            android:layout_height="@dimen/item_image_sizeX"
            android:scaleType="fitCenter"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/img_input"
            android:layout_toRightOf="@id/img_input"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:stretchColumns="0">

            <TableRow>
                <TextView android:id="@+id/money_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money" />
            </TableRow>
            <TableRow>
                <EditText android:id="@+id/input_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </TableRow>
            <TableRow>
                <TextView android:id="@+id/date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

            </TableRow>
            <TableRow>
                <Button android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:color="@color/white"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:stretchColumns="1">
        <TableRow>
            <TextView android:id="@+id/label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label" />
            <Spinner android:id="@+id/input_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/sub_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_label" />
            <Spinner android:id="@+id/input_sub_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>
        </TableRow>
    </TableLayout>

    <TextView android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/note" />
    <EditText android:id="@+id/input_note"
        android:background="@drawable/inputfield_boarder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/note_field_height"
        android:padding="@dimen/input_field_padding"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minLines="1"
        android:gravity="top|start"
        android:scrollbars="vertical"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <Button
            android:id="@+id/ok_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</LinearLayout>