<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/fragment_main"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <ImageButton
        android:id="@+id/payment_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@mipmap/payment2"
        android:onClick="onClickMain"
        android:layout_above="@+id/report_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_pay"
        android:layout_below="@id/payment_btn"
        android:layout_alignLeft="@id/payment_btn"
        android:layout_alignStart="@id/payment_btn"
        android:layout_alignRight="@id/payment_btn"
        android:layout_alignEnd="@id/payment_btn"
        android:gravity="center_horizontal"
        android:id="@+id/textView" />
    <ImageButton
        android:id="@+id/income_btn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@mipmap/money2"
        android:onClick="onClickMain"
        android:layout_alignTop="@+id/payment_btn"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_income"
        android:layout_below="@id/income_btn"
        android:layout_alignLeft="@id/income_btn"
        android:layout_alignStart="@id/income_btn"
        android:layout_alignRight="@id/income_btn"
        android:layout_alignEnd="@id/income_btn"
        android:gravity="center_horizontal"/>
    <ImageButton
        android:id="@+id/report_btn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@mipmap/report3"
        android:onClick="onClickMain"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_report"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/report_btn" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">
        <Button
            android:id="@+id/daily_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@mipmap/pig_today"
            android:onClick="onClickMain" />
        <Button
            android:id="@+id/weekly_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@mipmap/pig_week"
            android:onClick="onClickMain" />
        <Button
            android:id="@+id/monthly_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@mipmap/pig_month"
            android:onClick="onClickMain" />

    </LinearLayout>

</RelativeLayout>
